# paperfmt

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.en.md  README.md  paperfmt.yaml  pyproject.toml
.github/prompts/: plan-paperfmt.prompt.md
.github/workflows/: ci.yml  publish.yml
.paperfmt/: report.txt
docs/: cli.en.md  cli.md  rules.en.md  rules.md
docs/archives/design/: interactive-fix-design.md  multi-template-design.md
docs/superpowers/plans/: 2026-05-14-phase-1-core-rules.md  2026-05-16-phase2-multi-template.md  2026-05-19-phase3-interactive-fix.md
docs/superpowers/specs/: 2026-05-14-paperfmt-roadmap-design.md  2026-05-16-phase2-multi-template-design.md  2026-05-19-phase3-interactive-fix-design.md
example/: main.tex  paperfmt.toml  references.bib
example/.paperfmt/: report.txt
paperfmt/: __main__.py  cli.py
paperfmt/assets/templates/ieee/: main.tex.tmpl  refs.bib
paperfmt/core/: artifacts.py  checker.py  compiler.py  config.py  errors.py  models.py  normalize.py  paperfmt_config.py  project_config.py  registry.py  scaffold.py  templates.py  tex_utils.py
paperfmt/core/rules/: __init__.py  acl.py  acm.py  base.py  common.py  ieee_conf.py  neurips.py
paperfmt/defaults/: ieee.yaml
paperfmt/templates/ieee/: template.tex
samples/: main.tex  paper.md
scripts/: paperfmt-docker.ps1  paperfmt-docker.sh
tests/: test_cli.py  test_normalize.py  test_workflow.py
