[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperfmt"
version = "0.1.0"
description = "Template compliance checker and safe formatter for academic papers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "paperfmt contributors" }
]
dependencies = [
  "click>=8.1.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[project.scripts]
paperfmt = "paperfmt.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["paperfmt*"]

[tool.setuptools.package-data]
paperfmt = ["assets/templates/**/*.tmpl", "assets/templates/**/*.bib"]
