[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperfmt"
version = "1.0.1"
description = "Template compliance checker and safe formatter for academic papers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "paperfmt contributors" }
]
dependencies = [
  "click>=8.1.7",
  "tomli>=2.0.1; python_version < '3.11'"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.11.0"
]
image = [
  "Pillow>=10.0"
]
link = [
  "httpx>=0.27"
]
full = [
  "paperfmt[image,link]"
]

[project.scripts]
paperfmt = "paperfmt.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["paperfmt*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "UP", "RUF100"]

[tool.ruff.lint.isort]
known-first-party = ["paperfmt"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
